--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Agora Web Sample</title>
-<link rel="stylesheet" href="vendor/bootstrap.min.css">
-<script src="AgoraRTCSDK-2.4.1.js"></script>
-<script src="vendor/jquery.js"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap.min.css') }}">
+<script src="{{ url_for('static', filename='AgoraRTCSDK-2.4.1.js') }}"></script>
+<script src="{{ url_for('static', filename='vendor/jquery.js') }}"></script>
 </head>
 
 <body>
