API key thing works

--- a/templates/index.html
+++ b/templates/index.html
@@ -224,6 +224,8 @@ function getDevices() {
 //audioSelect.onchange = getDevices;
 //videoSelect.onchange = getDevices;
 getDevices();
+
+document.getElementById("appId").value = "{{ API_KEY }}";join();
 </script>
 </body>
 </html>
