--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,34 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap.min.css') }}">
 <script src="{{ url_for('static', filename='AgoraRTCSDK-2.4.1.js') }}"></script>
 <script src="{{ url_for('static', filename='vendor/jquery.js') }}"></script>
-</head>
+<title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+    /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+    .row.content {height: 800px}
+
+    /* Set gray background color and 100% height */
+    .sidenav {
+      background-color: #f1f1f1;
+      height: 100%;
+    }
+
+    /* Set black background color, white text and some padding */
+    footer {
+      background-color: #555;
+      color: white;
+      padding: 15px;
+    }
+.fill img {
+width: 350px;
+height: 500px;
+}
+  </style>
+  </head>
 
 <body>
 <div id="div_device" class="panel panel-default">
@@ -31,10 +58,53 @@
             <div id="agora_local"></div>
         </div>
     </div-->
-
-<div id="video" style="margin:0 auto;">
-    <div id="agora_local" style="float:right;width:210px;height:147px;display:inline-block;"></div>
+<div class="container-fluid">
+  <div class="row content">
+    <div class="col-sm-3 sidenav">
+      <h4>Card Game</h4>
+      <div>
+      <ul class="nav nav-pills nav-stacked">
+        <li align="center" class="active"><a>Chris</a></li>
+        <div>
+        <div id="video" style="">
+    <div id="agora_local" style="width:100%;height:200px;display:inline-block;"></div>
 </div>
+        </div>
+        <li align="center"><a>Max</a></li>
+        <div align="center">
+        <img src="https://www.w3schools.com/images/colorpicker.gif">
+        </div>
+        <li align="center"><a>Randolph</a></li>
+        <div align="center">
+        <img src="https://www.w3schools.com/images/colorpicker.gif">
+        </div>
+      </ul>
+      </div>
+      <br><br>
+      <div style="bottom:0;position: absolute; width:90%;padding-bottom:10px;padding-left:10px;" align="center">
+        <div align="center">
+        <button type="button" class="btn btn-primary btn-lg btn-block">Deal Card</button>
+        </div>
+        <br>
+         <div align="center">
+        <button type="button" class="btn btn-danger btn-lg btn-block">Reset Game</button>
+        </div>
+    </div>
+    </div>
+
+    <div class="col-sm-9 fill">
+      <div align="center">
+        <img src="static/cards/10C.png">
+      </div>
+     </div>
+  </div>
+</div>
+
+<footer class="container-fluid">
+  <p>Footer Text</p>
+</footer>
+
+
 
 <script language="javascript">
 
