Cards are working properly

--- a/templates/index.html
+++ b/templates/index.html
@@ -307,6 +307,14 @@ function resetCards(){
   newCard();
 }
 
+function getImage(){
+  var url = "/recent?cache=" +  Math.floor(Math.random()*1000000);
+    console.log(url);
+    document.getElementById("cardVal").src=url;
+}
+
+setInterval(function() {getImage();}, 200);
+
 //audioSelect.onchange = getDevices;
 //videoSelect.onchange = getDevices;
 getDevices();
