--- a/templates/index.html
+++ b/templates/index.html
@@ -64,22 +64,18 @@ height: 500px;
       <h4>Card Game</h4>
       <div>
       <ul class="nav nav-pills nav-stacked">
-        <li align="center" class="active"><a>Player 1</a></li>
+        <li align="center" class="active"><a>Current Player</a></li>
         <div>
         <div id="video" style="">
     <div id="agora_local" style="width:100%;height:200px;display:inline-block;"></div>
 </div>
 
         </div>
-        <li align="center"><a>Player 2</a></li>
+        <li align="center"><a>Players</a></li>
         <div>
 
         <div id="video1" style="">
         </div>
-        </div>
-        <li align="center"><a>Player 3</a></li>
-        <div align="center">
-        <img src="https://www.w3schools.com/images/colorpicker.gif">
         </div>
       </ul>
       </div>
