--- a/templates/index.html
+++ b/templates/index.html
@@ -252,7 +252,11 @@ function checkVolume(myVal){
   }
   console.log(window.elmt);
   if (toNotify){
-    alert("Too Loud");
+    a = httpGet("/isWin");
+    console.log(a);
+    if (a == "True"){
+      alert("You Scored!");
+    }
     window.elmt = [];
   }
 }
